@@ -1,9 +1,6 @@
 package asg.onlinetest;
-/**
- * 
- */
+
 import java.util.*;
-import java.util.stream.Collectors;
 import java.text.SimpleDateFormat;
 /**
  * @author vkunnakkattil
@@ -12,20 +9,18 @@ import java.text.SimpleDateFormat;
 public class ASGTest {
 
 	/**
-	 * @param args
-	 */
+     */
 
 	public static Boolean canViewAll(Collection<Movie> movies) {
 		if (movies.isEmpty())
 			return true;
 
-		List<Movie> result = movies.stream().sorted((o1, o2) -> o1.getStart().compareTo(o2.getStart()))
-				.collect(Collectors.toList());
+		List<Movie> result = movies.stream().sorted(Comparator.comparing(Movie::start)).toList();
 
 		Movie prev = null;
 		for (Movie current : result) {
 			if (null != prev) {
-				if (prev.getEnd().compareTo(current.getStart()) > 0)
+				if (prev.end().compareTo(current.start()) > 0)
 					return false;
 			}
 			prev = current;
@@ -36,7 +31,7 @@ public class ASGTest {
     public static void main(String[] args) throws Exception {
         SimpleDateFormat sdf = new SimpleDateFormat("y-M-d H:m");
 
-        ArrayList<Movie> movies = new ArrayList<Movie>();
+        ArrayList<Movie> movies = new ArrayList<>();
         movies.add(new Movie(sdf.parse("2015-01-01 20:00"), sdf.parse("2015-01-01 21:30")));
         movies.add(new Movie(sdf.parse("2015-01-01 21:30"), sdf.parse("2015-01-01 23:30")));
         movies.add(new Movie(sdf.parse("2015-01-01 21:30"), sdf.parse("2015-01-01 23:00")));
@@ -46,19 +41,4 @@ public class ASGTest {
 
 }
 
-class Movie {
-    private Date start, end;
-    
-    public Movie(Date start, Date end) {
-        this.start = start;
-        this.end = end;
-    }
-    
-    public Date getStart() {
-        return this.start;
-    }
-    
-    public Date getEnd() {
-        return this.end;
-    } 
-}
+record Movie(Date start, Date end) { }
